(http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
The changelog style is adapted from Apache Lucene.

Note that ``RB_ID=#`` correspond to associated messages in commits.

Next Version

New Features:

  * util-core: `c.t.util.FuturePool` now optionally exposes metrics on
    their internal state such as active tasks, and completed tasks.
    ``RB_ID=850652``

Changes in Runtime Behavior:

  * util-eval: The compiler reporter is now reset between code check invocations.
    This means that when there is a failure that it is no longer required to reset
    the entire state to recover and that already compiled and loaded classes can still
    be used. ``RB_ID=859878``

6.35.0  2016-07-07

Changes in Runtime Behavior:

  * util-codec: StringEncoder no longer depends on apache commons-codec, and
    decode will now throw an exception when it fails to decode a byte, instead
    of failing silently. ``RB_ID=833478``

  * util-collection: LruMap is now backed by jdk LinkedHashMap instead of apache
    collections LRUMap. ``RB_ID=833515``

  * util-core: `com.twitter.util.NonFatal` is now implemented by Scala's
    `scala.util.control.NonFatal`. This changes behavior such that
    `java.lang.StackOverflowError` is considered fatal and
    `java.lang.NoSuchMethodException` is considered non-fatal.
    ``RB_ID=835671``

New Features:

  * util-app: `com.twitter.finagle.util.LoadService` has been moved to
    `c.t.app.LoadService` and can now be used without needing a finagle-core
    dependency. ``RB_ID=829897``

  * util-cache: Adds support for Caffeine-style caches. ``RB_ID=833848``

  * util-core: Add `c.t.concurrent.Scheduler.blockingTimeNanos` which tracks time spent doing
    blocking operations. ``RB_ID=828289``

  * util-core: Reduced allocations by 40% and latency by 18% of satisfying `Promises`.
    ``RB_ID=832816``

  * util-core: `c.t.util.NoStacktrace` is removed. Use `scala.util.control.NoStackTrace` instead.
    ``RB_ID=833188``
